# api_todo

./: .gitignore  README.md  migrations.json  models.py  pyproject.toml  schema.py  settings.yaml  sq_db.sql  todo.py
app/: config.py  enums.py  models.py  schema.py  todo.py
migrations/: 0001_migration_202303131729.py  0001_migration_202303221448.py  0002_migration_202303131855.py  0003_migration_202303141024.py  0004_migration_202303141037.py  0005_migration_202303141040.py  0006_migration_202303141058.py  0007_migration_202303161321.py  0008_migration_202303161328.py  0009_migration_202303161330.py
test/: test_create_task.py  test_delete_task.py  test_get_task.py  test_update_task_status.py
test/helpers/: client.py  schema.py
tests/: client.py  schema_tests.py  test_api.py
