[tool.poetry]
name = "api-todo"
version = "0.1.0"
description = ""
authors = ["Denis <den4ik.pronin94@gmail.com>"]
readme = "README.md"
packages = [{include = "api_todo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
